--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,12 +1,13 @@
 body {
     --primary-color: #ED2553;
+    --primary-color-light: #ffbecc;
     --primary-bg: #ffffff;
     --primary-text: #1d1d1d;
     --secondary-bg: rgba(246, 244, 241, 1);
     --secondary-bg-hover: rgba(231, 229, 225, 1);
     --secondary-text: rgba(136, 139, 142, 1);
-    font-size: 2rem;
-
+    --inline-bg: rgb(248, 248, 248);
+    line-height: unset;
 }
 
 a {
