--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,10 +2,11 @@ body {
     --primary-color: #ED2553;
     --primary-color-light: #ffbecc;
     --primary-bg: #ffffff;
-    --primary-text: #1d1d1d;
+    --primary-text: rgba(0, 0, 0, 0.87);
     --secondary-bg: rgba(246, 244, 241, 1);
     --secondary-bg-hover: rgb(222, 220, 216);
-    --secondary-text: rgba(136, 139, 142, 1);
+    --secondary-text: rgba(0, 0, 0, 0.54);
+    --mu-bg: #fafafa;
     --inline-bg: rgb(248, 248, 248);
     line-height: unset;
 }
