--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'SwankyandMooMoo';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/SwankyandMooMoo-Regular.ttf') format('truetype');
+}
 body {
     --primary-color: #ED2553;
     --primary-color-light: #ffbecc;
@@ -10,6 +16,7 @@ body {
     --inline-bg: rgb(248, 248, 248);
     line-height: unset;
     background-color: var(--primary-bg);
+    margin: 0;
 }
 
 a {
